--- a/now.json
+++ b/now.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "name": "now-examples",
+  "name": "nWeather",
   "public": true,
   "builds": [
     { "src": "src/app.js", "use": "@now/node" }
