update app to support now env variables

--- a/now.json
+++ b/now.json
@@ -7,7 +7,7 @@
   ],
   "build": {
     "env": {
-      "env": "PRODUCTION",
+      "NODE_ENV": "PRODUCTION",
       "api_owm": "@owm-api-key"
     }
   }
