--- a/now.json
+++ b/now.json
@@ -1,9 +1,15 @@
 {
   "version": 2,
   "name": "nWeather",
-  "public": true,
-  "builds": [{ "src": "src/app.js", "use": "@now/node-server" }],
-  "routes": [{ "src": "/api", "dest": "src/app.js" }],
+  "public": false,
+  "builds": [
+    {
+      "src": "src/app.js",
+      "use": "@now/node-server",
+      "config": { "maxLambdaSize": "20mb", "methods": ["GET", "POST"] }
+    }
+  ],
+  "routes": [{ "src": "/.*", "dest": "src/app.js" }],
   "env": {
     "NODE_ENV": "PRODUCTION",
     "OWM_API_KEY": "@owm-api-key"
