--- a/.graphqlconfig
+++ b/.graphqlconfig
@@ -3,7 +3,7 @@
   "extensions": {
     "endpoints": {
       "dev": "http://localhost:4000",
-      "prod": "https://nweather.josefaidt.now.sh/api"
+      "stage": "https://nweather.josefaidt.now.sh/api"
     }
   }
 }
