--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "weather-gql",
+  "name": "nweather",
+  "private": false,
   "version": "0.1.2",
   "main": "src/app.js",
   "license": "Apache-2.0",
   "scripts": {
-    "start": "node src/app.js",
-    "deploy": "now -e NODE_ENV=PRODUCTION -e OWM_API_KEY=@owm-api-key",
+    "start": "yarn build:schema; node src/app.js",
+    "build:schema": "node scripts/buildTypeDefs",
+    "deploy": "yarn build:schema; now -e NODE_ENV=PRODUCTION -e OWM_API_KEY=@owm-api-key",
     "lint:graphql": "graphql lint src/schema.json",
     "format": "yarn format:eslint && yarn format:prettier",
-    "format:eslint": "eslint --configFile .eslintrc.js --fix src",
+    "format:eslint": "eslint --config config/.eslintrc.js --fix src",
     "format:prettier": "prettier --write **/*.graphql"
   },
   "devDependencies": {
@@ -25,9 +27,14 @@
     "node-fetch": "^2.3.0",
     "prisma-client-lib": "^1.28.5"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
     "**/*.js": "yarn format:eslint",
-    "**/*.graphql": [
+    "src/schema.graphql": [
       "yarn format:prettier",
       "yarn lint:graphql"
     ]
