--- a/now.json
+++ b/now.json
@@ -1,15 +1,16 @@
 {
-  "version": 2,
   "name": "nweather",
   "public": false,
+  "version": 2,
   "builds": [
     {
       "src": "src/**/*.js",
-      "use": "@now/node",
+      "use": "@now/node-server",
       "config": { "maxLambdaSize": "20mb", "methods": ["GET", "POST"] }
     },
     { "src": "static/index.html", "use": "@now/static" }
   ],
+  "routes": [{ "src": "/api", "dest": "src/app.js" }],
   "env": {
     "NODE_ENV": "PRODUCTION",
     "OWM_API_KEY": "@owm-api-key"
