--- a/package.json
+++ b/package.json
@@ -22,10 +22,9 @@
     "prettier": "^1.16.4"
   },
   "dependencies": {
+    "apollo-server": "^2.4.8",
     "graphql": "^14.1.1",
-    "graphql-yoga": "^1.17.4",
-    "node-fetch": "^2.3.0",
-    "prisma-client-lib": "^1.28.5"
+    "node-fetch": "^2.3.0"
   },
   "husky": {
     "hooks": {
