--- a/.graphqlconfig
+++ b/.graphqlconfig
@@ -1,5 +1,5 @@
 {
-  "schemaPath": "src/schema.graphql",
+  "schemaPath": "**/schema.graphql",
   "extensions": {
     "endpoints": {
       "dev": "http://localhost:4000",
