--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "src/app.js",
   "license": "Apache-2.0",
   "scripts": {
-    "start": "yarn build:schema; node src/app.js",
+    "start": "node src/app.js",
     "build:schema": "node scripts/buildTypeDefs",
-    "deploy": "yarn build:schema; now -e NODE_ENV=PRODUCTION -e OWM_API_KEY=@owm-api-key",
-    "lint:graphql": "graphql lint src/schema.json",
+    "deploy": "now -e NODE_ENV=PRODUCTION -e OWM_API_KEY=@owm-api-key",
+    "lint:graphql": "graphql lint",
     "format": "yarn format:eslint && yarn format:prettier",
     "format:eslint": "eslint --config config/.eslintrc.js --fix src",
     "format:prettier": "prettier --write **/*.graphql"
@@ -33,9 +33,8 @@
   },
   "lint-staged": {
     "**/*.js": "yarn format:eslint",
-    "src/schema.graphql": [
-      "yarn format:prettier",
-      "yarn lint:graphql"
+    "**/schema.graphql": [
+      "yarn format:prettier"
     ]
   }
 }
